deploy/kubernetes/acorn-dpl.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: acorndeployment
  labels:
    app: acorn
    microservice: app
  namespace: acorn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: acorn
      microservice: app
  template:
    metadata:
      labels:
        app: acorn
        microservice: app
        version: v0.0.1
    spec:
      containers:
      - name: acorn
        image: cciturria/acorn
        ports:
        - containerPort: 3000
