deploy/kubernetes/apis4atp-dpl.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: apis4atpdeployment
  labels:
    app: apis4atp
    microservice: app
  namespace: apis4atp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apis4atp
      microservice: app
  template:
    metadata:
      labels:
        app: apis4atp
        microservice: app
        version: v0.0.1
    spec:
      containers:
      - name: apis4atp
        image: cciturria/apis4atp
        ports:
        - containerPort: 3000
