deploy/kubernetes/acorn-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: acornservice
  namespace: acorn
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 3000
  selector:
    app: acorn
    microservice: app
