deploy/kubernetes/apis4atp-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apis4atpservice
  namespace: apis4atp
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 3000
  selector:
    app: apis4atp
    microservice: app
