deploy/kubernetes/acorn-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acorningress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  namespace: acorn      
spec:
  rules:
  - host:
    http:
      paths:
      - path: /acorn
        backend:
          serviceName: acornservice
          servicePort: http
