deploy/kubernetes/apis4atp-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apis4atpingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  namespace: apis4atp      
spec:
  rules:
  - host:
    http:
      paths:
      - path: /apis4atp
        backend:
          serviceName: apis4atpservice
          servicePort: http
